@@ -4,6 +4,7 @@ cm4all-workshop (0.2.2) unstable; urgency=low
   * column "id" should be a primary key
   * fixed gcc warning on PowerPC due to char being unsigned
   * check "time_done IS NULL" for improved index usage
+  * added row limit to pg_select_new_jobs()
 
  --
 
